--- a/GameStore.Client/Pages/Index.razor
+++ b/GameStore.Client/Pages/Index.razor
@@ -1,9 +1,21 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Game Catalog</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Game Catalog</h1>
 
 Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<table>
+    <thead>
+        <td>Id</td>
+        <td>Name</td>
+        <td>Genre</td>
+        <td>Price</td>
+        <td>Release Date</td>
+        <td></td>
+    </thead>
+    <tbody>
+
+    </tbody>
+</table>
