--- a/GameStore.Client/Pages/EditGame.razor
+++ b/GameStore.Client/Pages/EditGame.razor
@@ -1,4 +1,5 @@
 ﻿@page "/game"
+@inject NavigationManager NavigationManager
 
 <PageTitle>New game</PageTitle>
 <h1>New Catalog</h1>
@@ -6,7 +7,7 @@
 
 <div class="row">
     <div class="col-sm-4">
-        <EditForm Model="@game">
+        <EditForm Model="@game" OnSubmit="HandleSubmit">
             <div class="mb-3">
                 <label for="name" class="form-label">Name:</label>
                 <InputText id="name" @bind-Value="game.Name" class="form-control"></InputText>
@@ -23,6 +24,7 @@
                 <label for="releasedate" class="form-label">Release Date:</label>
                 <InputDate id="releasedate" @bind-Value="game.ReleaseDate" class="form-control"></InputDate>
             </div>
+            <button type="submit" class="btn btn-primary">Save</button>
         </EditForm>
     </div>
 </div>
@@ -34,4 +36,10 @@
             Genre = String.Empty,
             ReleaseDate = DateTime.Now
         };
+
+    private void HandleSubmit()
+    {
+        GameClient.AddGame(game);
+        NavigationManager.NavigateTo("/");
+    }
 }
