--- a/GameStore.Client/Pages/Index.razor
+++ b/GameStore.Client/Pages/Index.razor
@@ -1,8 +1,15 @@
 ﻿@page "/"
+@inject NavigationManager NavigationManager
 
 <PageTitle>Game Catalog</PageTitle>
 
 <h1>Game Catalog</h1>
+
+<div class="row mb-4">
+    <div class="col-sm-6">
+        <button type="button" class="btn btn-primary" @onclick="CreateGame">New Game</button>
+    </div>
+</div>
 
 @if (games != null)
 {
@@ -47,5 +54,10 @@ else
 
         games = GameClient.GetGames();
 
+    }
+
+    private void CreateGame()
+    {
+        NavigationManager.NavigateTo("/game");
     }
 }
