--- a/GameStore.Client/Pages/Index.razor
+++ b/GameStore.Client/Pages/Index.razor
@@ -15,6 +15,10 @@
 {
     <p>Welcome to your new app.</p>
 
+    <DeleteGame game="@currentGame" OnClose="@OnDeleteModalClose">
+
+    </DeleteGame>
+
     <table class="table table-striped table-bordered table-hover">
     <thead class="table-dark">
         <td>Id</td>
@@ -37,6 +41,10 @@
                         <button class="btn btn-primary" @onclick="(() => EditGame(item.Id))">
                             <i class="oi oi-pencil"></i>
                         </button>
+                        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#daleteModal"
+                            @onclick="(() => currentGame = item)">
+                            <i class="oi oi-x"></i>
+                        </button>
                     </td>
                 </tr>
             }
@@ -51,7 +59,7 @@ else
 
 @code {
     private Models.Game[]? games;
-
+    private Models.Game? currentGame;
     protected override void OnInitialized()
     {
         base.OnInitialized();
@@ -68,5 +76,14 @@ else
     private void EditGame(int Id)
     {
         NavigationManager.NavigateTo($"/game/{Id}");
+    }
+
+    private void OnDeleteModalClose(bool accepted)
+    {
+        if (accepted)
+        {
+            GameClient.DeleteGame(currentGame!.Id);
+            games = GameClient.GetGames();
+        }
     }
 }
