--- a/GameStore.Client/Pages/Index.razor
+++ b/GameStore.Client/Pages/Index.razor
@@ -5,6 +5,8 @@
 @inject HttpClient Http
 @using System.Net.Http.Json
 
+@attribute [Authorize]
+
 <PageTitle>Game Catalog</PageTitle>
 
 <h1>Game Catalog</h1>
