--- a/GameStore.Client/Shared/MainLayout.razor
+++ b/GameStore.Client/Shared/MainLayout.razor
@@ -1,11 +1,21 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager NavigationManager
 
 <div class="page">
 
     <main>
-
+        <AuthorizeView>
+            <Authorized>
+                <button style="btn btn-primary">Log out</button>
+                <h3>Welcome, @context.User.Identity?.Name</h3>
+            </Authorized>
+        </AuthorizeView>
         <article class="content px-4">
             @Body
         </article>
     </main>
 </div>
+
+@code {
+    void LogOut() => NavigationManager.NavigateToLogout("/authentication/logout", "/");
+}
