--- a/GameStore.Client/_Imports.razor
+++ b/GameStore.Client/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using GameStore.Client
 @using GameStore.Client.Shared
+
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
