--- a/GameStore.Client/Pages/Index.razor
+++ b/GameStore.Client/Pages/Index.razor
@@ -5,7 +5,7 @@
 @inject HttpClient Http
 @using System.Net.Http.Json
 
-@attribute [Authorize]
+@* @attribute [Authorize] *@
 
 <PageTitle>Game Catalog</PageTitle>
 
